@@ -14,6 +14,7 @@ import java.lang.foreign.Linker;
 import java.lang.foreign.MemoryLayout.PathElement;
 import java.lang.foreign.MemorySegment;
 import java.lang.foreign.StructLayout;
+import java.lang.foreign.ValueLayout;
 import java.lang.invoke.VarHandle;
 
 /**
@@ -43,7 +44,7 @@ class Linux {
      * @return error message
      */
     static String getErrorMessage(int err) {
-        return string.strerror(err).getUtf8String(0);
+        return string.strerror(err).getString(0);
     }
 
     /**
@@ -56,6 +57,8 @@ class Linux {
      * @return error code
      */
     static int getErrno(MemorySegment errorState) {
-        return (int) callState_errno$VH.get(errorState);
+        return errorState.get(ValueLayout.JAVA_INT, 0);
+        // TODO: revert to varhandle
+        // return (int) callState_errno$VH.get(errorState);
     }
 }
